# meldy

./: .editorconfig  .gitignore  1.bundle.js  2.bundle.js  3.bundle.js  4.bundle.js  5.bundle.js  CNAME  Pipfile  README.md  app.py  grades.yml  grammar.js  index.html  package-lock.json  package.json  requirements.txt  webpack.config.js
.github/workflows/: aws.yml  backend.yml  dependabot.yml  frontend.yml  gh_pages.yml
back-end/: .gitignore  Dockerfile  Pipfile  Procfile  README.md  app.py  deta.json  main.py  makefile  pyproject.toml
back-end/data/: durations.yml  grades.yml
back-end/meldy/: __init__.py
back-end/src/: grammar.py  melody.py  utils.py
data/: durations.yml
docs/: melody-generation.md  slides.html  slides2.html
docs/graphs/: degrees-example.gv  domobile-example.gv  durations-example.gv
docs/video/: demo  test.mov
front-end/: README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
front-end/scripts/: dep_fixes.sh
front-end/src/: main.html  main.js  navigation.js  utils.js
front-end/src/assets/: style.css
front-end/src/p5/: components.ts  mood_picker.ts  mood_picker_sketch.js  mood_picker_sketch.ts
front-end/src/render/: synth.js
front-end/src/views/: base.js  navigation.js  request.html  request.js  result.html  result.js
soundfonts/midi-js-soundfonts-master/: README.md
src/: grammar.js  main.js  melody.py
src/core/: synth.js
src/core/melody/: durations.yml  grades.yml  grammar.js  melody.js
src/core/melody_gen/: melody.js
src/render/: sheet.js
